--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Anishya Harshan</strong>, Graduate Student<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>Anishya Harshan</strong><br />
+					Graduate Student in Astronomy<br />
+					UNSW Sydney<br />
+					
 				</div>
 			</header>
 
