--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 							magna sed accumsan arcu neque.</h2>
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<head>
+   						 <title>Title of the document</title>
+  						</head>
+  						<body>
+    					<h1>PDF Example</h1>
+   						 <p>You can find my CV <a href="Anishya_CV.pdf">here</a>.</p>
+  						</body>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
