--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
    						 <title>Title of the document</title>
   						</head>
   						<body>
-    					<h1>PDF Example</h1>
    						 <p>You can find my CV <a href="Anishya_CV.pdf">here</a>.</p>
   						</body>
 						<ul class="actions">
@@ -48,12 +47,12 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Research Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/electrondensity.jpg" class="image fit thumb"><img src="images/thumbs/electrondensity.jpg" alt="" /></a>
+								<h3>Measuring electron density with [OII] as a function of environment at z = 1.6</h3>
+								<p>The global star formation rates (SFR) of galaxies at fixed stellar masses increase with redshift and are known to vary with environment up to $z\sim2$.} We explore here whether the changes in the star formation rates also apply to the electron densities of the inter-stellar medium (ISM) by measuring the \oii\ (\lambdaoii) ratio for cluster and field galaxies at $z\sim2$. We measure a median electron density of  \nel\,=\,\udscls\,\cm\ for six galaxies (with $1\sigma $ scatter = 163\,\cm) in the UDS proto-cluster at $z=1.62$.\textbf{ We find that the median electron density of galaxies in proto-cluster environment is three times higher compared to the median electron density of field galaxies (\nel\,=\,\fldmel\,\cm\ and $1\sigma $ scatter = 79\,\cm) at comparable redshifts, stellar mass and SFR}. However, we note that a sample of six proto-cluster galaxies is insufficient to reliably measure the  electron density in the proto-cluster environment. \textbf{We conclude that the electron density increases with redshift in both cluster and field environments up to $z\sim2$ (\nel\,=\, $30\pm1$\,\cm for $z\sim0$ to \nel\,=\,\udsall\,\cm for $z\sim1.5$). We find tentative evidence ($\sim 2.6\sigma$) for dependence of electron density on environment, but are limited by the small sample size.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
