--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Hi, I'm <b>Anishya</b></h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am a graduate student in Astronomy at the University of New South Wales with Dr. Kim-Vy Tran and Dr. Anshu Gupta. I am interested in undestanding the formation and evolution of galaxies. My work focuses on how the environment of a galaxy affects the properties of its Inter Stellar Medium and how that affects the star formation of the galaxy. I use optical and infrared spectroscopic and photometric data from ground based and space based telescopes to study star forming galaxies in proto-cluster environment at z~2. I also use cosmological hydrodynamical simulations to compare our understanding of the universe to the observations and thus filling the gap between the two. 
+						 
 						<head>
    						 <title>Title of the document</title>
   						</head>
@@ -55,8 +55,8 @@
 								<p>The global star formation rates (SFR) of galaxies at fixed stellar masses increase with redshift and are known to vary with environment up to $z\sim2$.} We explore here whether the changes in the star formation rates also apply to the electron densities of the inter-stellar medium (ISM) by measuring the \oii\ (\lambdaoii) ratio for cluster and field galaxies at $z\sim2$. We measure a median electron density of  \nel\,=\,\udscls\,\cm\ for six galaxies (with $1\sigma $ scatter = 163\,\cm) in the UDS proto-cluster at $z=1.62$.\textbf{ We find that the median electron density of galaxies in proto-cluster environment is three times higher compared to the median electron density of field galaxies (\nel\,=\,\fldmel\,\cm\ and $1\sigma $ scatter = 79\,\cm) at comparable redshifts, stellar mass and SFR}. However, we note that a sample of six proto-cluster galaxies is insufficient to reliably measure the  electron density in the proto-cluster environment. \textbf{We conclude that the electron density increases with redshift in both cluster and field environments up to $z\sim2$ (\nel\,=\, $30\pm1$\,\cm for $z\sim0$ to \nel\,=\,\udsall\,\cm for $z\sim1.5$). We find tentative evidence ($\sim 2.6\sigma$) for dependence of electron density on environment, but are limited by the small sample size.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
+								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/sfh.png" alt="" /></a>
+								<h3>Star Formation Histories of galaxies with PROSPECTOR and IllustrisTNG in proto-cluster at z~2</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
