--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   						</head>
   						<body>
    						 <p>You can find my CV <a href="Anishya_CV.pdf">here</a>.</p>
+   						 <p> And you can find the list of my publications <a href="https://ui.adsabs.harvard.edu/public-libraries/Iq3oFaMsTZetqPVTMSzs5A">here</a>.</p>
   						</body>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
