--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<img src="images/avatar.png" width="150" height="160" alt="hkjkl" /></a>
 					<h1><strong>Anishya Harshan</strong><br />
 					Graduate Student in Astronomy<br />
 					UNSW Sydney<br />
