--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 								<h3>Star Formation Histories in proto-cluster environment with ZFOURGE and IllustrisTNG at z~2</h3>
 								<p>We measure the star formation histories using SED fitting tool Prospector for star forming galaxies in proto-cluster and field environments at z~2 from the ZFOURGE photometric survey. We compare our results to star formation histories for similarly sized  proto-cluster environments  in IllustrisTNG 100. We find galaxies with a minimum cut off in star formation (due to observational constrains), show suppression in star formation due to environment, in high mass galaxies as opposed to low mass galaxies. </p>
 							</article>
+						</div>
+						
+					</section>
+					<section id="two">
+						<h2>Service and Personal</h2>
+						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/ScreenShot2020-06-19at11am.png" class="image fit thumb"><img src="images/ScreenShot2020-06-19at11am.png" alt="" /></a>
 								<h3>Outreach</h3>
