--- a/Collaborations.html
+++ b/Collaborations.html
@@ -1653,4 +1653,4 @@ _._ModuleManager_initialize('view/kbkrpd/sy0/qkPXAf:1,2/vVEdxc/sy3/sy4:5/sy8/sy6
 }).call(this,this.default_tk);
 // Google Inc.
 
-//# sourceURL=/_/atari/_/js/k=atari.tk.en.DDCaJIkzQ00.O/d=1/rs=AGEqA5nXhS7RX2zgb9OOaxoRa1hwwrhj5w/m=view</script></div></div><div jscontroller="YV8yqd" jsaction="rcuQ6b:npT2md"><div id="docs-aria-speakable" aria-live="assertive" aria-relevant="additions" aria-atomic="true" aria-hidden="false" role="region" class="IWfHH"></div></div></body></html>index.html
+//# sourceURL=/_/atari/_/js/k=atari.tk.en.DDCaJIkzQ00.O/d=1/rs=AGEqA5nXhS7RX2zgb9OOaxoRa1hwwrhj5w/m=view</script></div></div><div jscontroller="YV8yqd" jsaction="rcuQ6b:npT2md"><div id="docs-aria-speakable" aria-live="assertive" aria-relevant="additions" aria-atomic="true" aria-hidden="false" role="region" class="IWfHH"></div></div></body></html>
